# clash-from-the-gates-up

./: .gitignore  README.md  cabal.project  cftgu.cabal  hie.yaml  simple.cabal  stack.yaml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
doc/: 0-prelude.md  1-drug.md  10-lens.md  11-bread-crumbs.md  2-wire.md  3-bit.md  4-data.md  5-class.md  6-drug.md  6-operator.md  7-operator.md  8-vector.md  drug.md  index.md  intro.md  x-operator.md
src/: Utils.hs
src/DDFF/: DFF.hs  Project.hs
src/Example/: DFF.hs  Project.hs
src/Fib/: Project.hs
src/ISR/: ISR.hs  Mult.hs  Project.hs  StagedMult.hs
src/Ignite/: Project.hs
src/Mult/: Project.hs  Staged.hs
src/Mult2/: Main.hs  Staged.hs
src/Q/: Circular.hs  Project.hs
tests/: doctests.hs  unittests.hs
tests/Tests/DDFF/: Project.hs
tests/Tests/Example/: Project.hs
